// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateApplicationButton renders correctly when disabled 1`] = `
<a
  href="undefined/create"
>
  <button
    aria-disabled="true"
    class="pf-c-button pf-m-primary pf-m-aria-disabled pf-m-small"
    data-ouia-component-id="OUIA-Generated-Button-primary-2"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    data-test-create-application="false"
    id="CreateAppButton"
    type="button"
  >
    Create application
  </button>
</a>
`;

exports[`CreateApplicationButton renders correctly when enabled 1`] = `
<a
  href="undefined/create"
>
  <button
    aria-disabled="false"
    class="pf-c-button pf-m-primary pf-m-small"
    data-ouia-component-id="OUIA-Generated-Button-primary-3"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    data-test-create-application="true"
    id="CreateAppButton"
    type="button"
  >
    Create application
  </button>
</a>
`;
